syntax = "proto3";
package auth_v1;
option go_package = "./auth_v1";

// Запрос на проверку аутентификации
message CheckAuthRequest {
  string token = 1;
  int32 userId = 2;
  string firstName = 3;
  string lastName = 4;
  string username = 5;
  string photoUrl = 6;
  string authDate = 7;
  bool isAdmin = 8;
}

// Ответ на проверку аутентификации
message CheckAuthResponse {
  bool isAuth = 1;
  string err = 2;
}

service AuthV1 {
  rpc CheckAuth(CheckAuthRequest) returns (CheckAuthResponse);
}